[package]
name = "actix-multipart"
version = "0.4.0-beta.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Multipart support for actix web framework."
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-multipart/"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_multipart"
path = "src/lib.rs"

[dependencies]
actix-web = { git = 'https://github.com/inq/actix-web.git', default-features = false }
actix-utils = { git = 'https://github.com/inq/actix-net.git'}

bytes = "1"
derive_more = "0.99.5"
httparse = "1.3"
futures-util = { version = "0.3.7", default-features = false }
log = "0.4"
mime = "0.3"
twoway = "0.2"

[dev-dependencies]
actix-rt = "2.0.0-beta.2"
actix-http = "3.0.0-beta.1"
